make call to reservation

--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -35,7 +35,7 @@
 			</div>
 			<div class='form-inline'>
 				<i class="fas fa-user-friends"></i>
-				<select id='cover'>
+				<select id='covers'>
 					<option value='1'>1 person</option>
 					<option value='2'>2 people</option>
 					<option value='3'>3 people</option>
