--- a/backend/static/stylesheets/main.scss
+++ b/backend/static/stylesheets/main.scss
@@ -38,6 +38,11 @@ input[type='submit']:hover{
   }
 }
 
+.selected{
+  color: red;
+  box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.2);
+}
+
 .biz-individual{
   display: flex;
   cursor: pointer;
