add onChange listener to date input

--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -37,7 +37,7 @@
 				<i class="fas fa-user-friends"></i>
 				<select id='covers'>
 					<option value='1'>1 person</option>
-					<option value='2'>2 people</option>
+					<option value='2' selected='selected'>2 people</option>
 					<option value='3'>3 people</option>
 					<option value='4'>4 people</option>
 					<option value='5'>5 people</option>
