temp finish both widget and js, backend need to implement websocket configue webhook on stripe

--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -68,7 +68,7 @@
 		</form>
 	</div>
 	<div class='stripe-widget'>
-		<form action="/" method="GET">
+		<form id='stripe-widget' action='/api/stripe/widget' method='GET'>
 		  <script
 		    src="https://checkout.stripe.com/checkout.js" class="stripe-button"
 		    data-key="pk_test_ROdkyhs5rFVG8xeBkE0X66QJ"
