refactor payment styling

--- a/backend/static/stylesheets/main.scss
+++ b/backend/static/stylesheets/main.scss
@@ -14,8 +14,10 @@ input[type='submit']{
   background-color: black;
   color: white;
 }
+
 input[type='submit']:hover{
   background-color: gray;
+  box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.2);
 }
 
 .alert{
@@ -122,15 +124,41 @@ input[type='submit']:hover{
   }
 }
 
-.stripe{
+.payment{
   position: fixed;
-  right: 0;
+  right: -34%;
   top: 450px;
   border: 1px solid lightgray;
   border-radius: 5px;
   padding: 15px;
   box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.2);
-  width: 30%;
+  width: 33%;
+  transition: all .8s;
+}
+
+.payment:hover{
+  right: 0;
+  .sign{
+    background-color: gray;
+    box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.2);
+  }
+}
+
+.stripe{
+  margin-bottom: 15px;
+  position: relative;
+  .sign{
+    text-align: center;
+    border-radius: 50%;
+    padding: 7px 17px;
+    color: white;
+    background-color: black;
+    background: rgba(0, 0, 0, 0.9);
+    font-size: 36px; 
+    position: absolute;
+    left: -50px;
+    top: -45px;  
+  }
   .amount{
     padding: 7px;
     margin-bottom: 15px;
@@ -160,8 +188,4 @@ input[type='submit']:hover{
   }
 }
 
-.stripe-widget{
-  position: fixed;
-  right: 50px;
-  top: 650px;
-}
+
