--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -51,34 +51,39 @@
 
 		</form>
 	</div>
-	<div class='stripe'>
-		<div class='amount'>
-			<label>Amount: </label>
-			$<strong>0.5</strong>
-		</div>
-		<form id='payment-form'>
-			<div class='form-inline'>
-				<label for='card-element'>Credit or debit card</label>
-				<div id='card-element'></div>
-				
-				<!-- Error handler -->
-				<div id='card-errors' role='alert'></div>
+	<div class='payment'>
+		<div class='stripe'>
+			<div class='sign'>
+				<i class="fas fa-dollar-sign"></i>
+			</div>	
+			<div class='amount'>
+				<label>Amount: </label>
+				$<strong>0.5</strong>
 			</div>
-			<button>Submit Payment</button>
-		</form>
-	</div>
-	<div class='stripe-widget'>
-		<form id='stripe-widget' action='/api/stripe/widget' method='GET'>
-		  <script
-		    src="https://checkout.stripe.com/checkout.js" class="stripe-button"
-		    data-key="pk_test_ROdkyhs5rFVG8xeBkE0X66QJ"
-		    data-amount="50"
-		    data-name="Pay With Stripe"
-		    data-description="Example charge"
-		    data-image="https://stripe.com/img/documentation/checkout/marketplace.png"
-		    data-locale="auto">
-		  </script>
-		</form>
+			<form id='payment-form'>
+				<div class='form-inline'>
+					<label for='card-element'>Credit or debit card</label>
+					<div id='card-element'></div>
+					
+					<!-- Error handler -->
+					<div id='card-errors' role='alert'></div>
+				</div>
+				<button>Submit Payment</button>
+			</form>
+		</div>
+		<div class='stripe-widget'>
+			<form id='stripe-widget' action='/api/stripe/widget' method='GET'>
+			  <script
+			    src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+			    data-key="pk_test_ROdkyhs5rFVG8xeBkE0X66QJ"
+			    data-amount="50"
+			    data-name="Pay With Stripe"
+			    data-description="Example charge"
+			    data-image="https://stripe.com/img/documentation/checkout/marketplace.png"
+			    data-locale="auto">
+			  </script>
+			</form>
+		</div>
 	</div>
 	<script src="https://js.stripe.com/v3/"></script>
 	<script type="text/javascript" src="{{url_for('static', filename='javascript/yelp.js')}}"></script>
