--- a/backend/static/stylesheets/style.css
+++ b/backend/static/stylesheets/style.css
@@ -216,4 +216,20 @@ input[type='submit']:hover {
     border: 1px solid lightgray;
     margin: 10px 0; }
 
+.notification {
+  color: black;
+  padding: 15px;
+  position: fixed;
+  right: -100%;
+  top: 100px;
+  width: 20%;
+  border-radius: 5px;
+  box-shadow: rgba(0, 0, 0, 0.2);
+  background: rgba(0, 0, 0, 0.2);
+  trasition: all .8s; }
+
+.active {
+  right: 0;
+  transition: all .8s; }
+
 /*# sourceMappingURL=style.css.map */
