--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -13,6 +13,9 @@
 	<link rel="stylesheet" href="{{url_for('static', filename='stylesheets/style.css')}}"></link>
 </head>
 <body>
+	<div class='notification'>
+		Please select restaurant
+	</div>
 	<div id='yelp'>
 		<form>
 			<input type='text' placeholder='input zipcode to get restaurant list'></input>
