paypal api implementation

--- a/backend/static/stylesheets/style.css
+++ b/backend/static/stylesheets/style.css
@@ -15,14 +15,17 @@ span, article, footer, time, small {
   vertical-align: inherit;
   box-sizing: inherit;
   background: transparent;
-  font-family: 'Robot', sans-serif; }
+  font-family: "Robot", sans-serif;
+}
 
 ul, ol {
-  list-style: none; }
+  list-style: none;
+}
 
 ::-webkit-input-placeholder {
   /* Chrome/Opera/Safari */
-  color: lightgray; }
+  color: lightgray;
+}
 
 label {
   -webkit-touch-callout: none;
@@ -30,22 +33,25 @@ label {
   -khtml-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
-  user-select: none; }
+  user-select: none;
+}
 
 img {
   display: block;
   width: 100%;
-  height: auto; }
+  height: auto;
+}
 
-input[type="password"],
-input[type="email"],
-input[type="text"] {
-  padding: 5px 10px; }
+input[type=password],
+input[type=email],
+input[type=text] {
+  padding: 5px 10px;
+}
 
-input[type="password"],
-input[type="email"],
-input[type="text"],
-input[type="submit"],
+input[type=password],
+input[type=email],
+input[type=text],
+input[type=submit],
 textarea,
 button {
   /*
@@ -53,75 +59,92 @@ button {
   http://css-tricks.com/almanac/properties/a/appearance/
   */
   -webkit-appearance: none;
-  -moz-appearance: none; }
+  -moz-appearance: none;
+}
 
 button,
-input[type="submit"] {
-  cursor: pointer; }
+input[type=submit] {
+  cursor: pointer;
+}
 
 /* Clearfix */
 .group::after {
   content: "";
   display: block;
-  clear: both; }
+  clear: both;
+}
 
 body {
-  font-size: 14px; }
+  font-size: 14px;
+}
 
-input {
+input, button {
   padding: 15px;
   border-radius: 5px;
-  border: 1px solid lightgray; }
+  border: 1px solid lightgray;
+}
 
-input[type='submit'] {
+input[type=submit], button {
   background-color: black;
-  color: white; }
+  color: white;
+}
 
-input[type='submit']:hover {
+input[type=submit]:hover, button:hover {
   background-color: gray;
-  box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.2); }
+  box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.2);
+}
 
 .alert {
   padding: 5px 10px;
   background: rgba(255, 0, 0, 0.2);
-  border-radius: 5px; }
+  border-radius: 5px;
+}
 
 #yelp {
   width: 50%;
-  margin: 30px auto; }
-  #yelp form {
-    width: 100%;
-    display: flex;
-    margin-bottom: 15px; }
-    #yelp form input[type='text'] {
-      flex: 1;
-      margin-right: 15px; }
+  margin: 30px auto;
+}
+#yelp form {
+  width: 100%;
+  display: flex;
+  margin-bottom: 15px;
+}
+#yelp form input[type=text] {
+  flex: 1;
+  margin-right: 15px;
+}
 
 .selected {
   color: red;
-  box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.2); }
+  box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.2);
+}
 
 .biz-individual {
   display: flex;
   cursor: pointer;
   align-items: center;
   margin-bottom: 10px;
-  border-radius: 5px; }
-  .biz-individual .img-container {
-    height: 50px;
-    width: 50px;
-    border-radius: 5px;
-    box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.2);
-    overflow: hidden;
-    margin-right: 20px; }
-    .biz-individual .img-container img {
-      height: 100%;
-      object-fit: cover; }
-  .biz-individual .img-container:hover {
-    opacity: 0.5; }
+  border-radius: 5px;
+}
+.biz-individual .img-container {
+  height: 50px;
+  width: 50px;
+  border-radius: 5px;
+  box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.2);
+  overflow: hidden;
+  margin-right: 20px;
+}
+.biz-individual .img-container img {
+  height: 100%;
+  object-fit: cover;
+}
+.biz-individual .img-container:hover {
+  opacity: 0.5;
+}
 
 .biz-individual:hover {
-  box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.2); }
+  box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.2);
+}
 
 #reservation {
   position: fixed;
@@ -131,37 +154,47 @@ input[type='submit']:hover {
   border-radius: 5px;
   padding: 15px;
   box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.2);
-  width: 20%; }
-  #reservation h3 {
-    font-weight: bold;
-    font-size: 18px;
-    border-bottom: 15px; }
-  #reservation form .form-inline {
-    display: flex;
-    align-items: center;
-    margin-bottom: 10px; }
-    #reservation form .form-inline i {
-      margin-right: 7px; }
-    #reservation form .form-inline select {
-      flex: 1;
-      padding: 5px 10px;
-      border-radius: 5px;
-      border: 1px solid lightgray; }
-    #reservation form .form-inline input {
-      padding: 5px 10px;
-      flex: 1; }
-    #reservation form .form-inline input[type='submit'] {
-      padding: 6px;
-      margin: auto; }
-  #reservation form .form-footer {
-    display: flex;
-    align-items: flex-end;
-    justify-content: space-between; }
-    #reservation form .form-footer span {
-      font-size: 10px; }
-      #reservation form .form-footer span i {
-        color: red;
-        margin-right: 7px; }
+  width: 20%;
+}
+#reservation h3 {
+  font-weight: bold;
+  font-size: 18px;
+  border-bottom: 15px;
+}
+#reservation form .form-inline {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+#reservation form .form-inline i {
+  margin-right: 7px;
+}
+#reservation form .form-inline select {
+  flex: 1;
+  padding: 5px 10px;
+  border-radius: 5px;
+  border: 1px solid lightgray;
+}
+#reservation form .form-inline input {
+  padding: 5px 10px;
+  flex: 1;
+}
+#reservation form .form-inline input[type=submit] {
+  padding: 6px;
+  margin: auto;
+}
+#reservation form .form-footer {
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-between;
+}
+#reservation form .form-footer span {
+  font-size: 10px;
+}
+#reservation form .form-footer span i {
+  color: red;
+  margin-right: 7px;
+}
 
 .payment {
   position: fixed;
@@ -172,49 +205,60 @@ input[type='submit']:hover {
   padding: 15px;
   box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.2);
   width: 33%;
-  transition: all .8s; }
+  transition: all 0.8s;
+}
 
 .payment:hover {
-  right: 0; }
-  .payment:hover .sign {
-    background-color: gray;
-    box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.2); }
+  right: 0;
+}
+.payment:hover .sign {
+  background-color: gray;
+  box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.2);
+}
 
 .stripe {
   margin-bottom: 15px;
-  position: relative; }
-  .stripe .sign {
-    text-align: center;
-    border-radius: 50%;
-    padding: 7px 17px;
-    color: white;
-    background-color: black;
-    background: rgba(0, 0, 0, 0.9);
-    font-size: 36px;
-    position: absolute;
-    left: -50px;
-    top: -45px; }
-  .stripe .amount {
-    padding: 7px;
-    margin-bottom: 15px;
-    display: flex; }
-    .stripe .amount strong {
-      font-weight: bold; }
-    .stripe .amount label {
-      margin-right: 10px; }
-  .stripe button {
-    padding: 15px;
-    border-radius: 5px;
-    border: 1px solid lightgray;
-    background-color: black;
-    color: white; }
-  .stripe button:hover {
-    background-color: gray; }
-  .stripe #card-element {
-    padding: 7px;
-    border-radius: 5px;
-    border: 1px solid lightgray;
-    margin: 10px 0; }
+  position: relative;
+}
+.stripe .sign {
+  text-align: center;
+  border-radius: 50%;
+  padding: 7px 17px;
+  color: white;
+  background-color: black;
+  background: rgba(0, 0, 0, 0.9);
+  font-size: 36px;
+  position: absolute;
+  left: -50px;
+  top: -45px;
+}
+.stripe .amount {
+  padding: 7px;
+  margin-bottom: 15px;
+  display: flex;
+}
+.stripe .amount strong {
+  font-weight: bold;
+}
+.stripe .amount label {
+  margin-right: 10px;
+}
+.stripe button {
+  padding: 15px;
+  border-radius: 5px;
+  border: 1px solid lightgray;
+  background-color: black;
+  color: white;
+}
+.stripe button:hover {
+  background-color: gray;
+}
+.stripe #card-element {
+  padding: 7px;
+  border-radius: 5px;
+  border: 1px solid lightgray;
+  margin: 10px 0;
+}
 
 .notification {
   color: black;
@@ -226,10 +270,16 @@ input[type='submit']:hover {
   border-radius: 5px;
   box-shadow: rgba(0, 0, 0, 0.2);
   background: rgba(0, 0, 0, 0.2);
-  trasition: all .8s; }
+  trasition: all 0.8s;
+}
 
 .active {
   right: 0;
-  transition: all .8s; }
+  transition: all 0.8s;
+}
+
+.paypal {
+  margin-top: 25px;
+}
 
 /*# sourceMappingURL=style.css.map */
