--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -87,9 +87,16 @@
 			  </script>
 			</form>
 		</div>
+		<div class='paypal'>
+			<button>Pay with PayPal</button>
+		</div>
+		<div class='paypal-sandbox'>
+			
+		</div>
 	</div>
 	<script src="https://js.stripe.com/v3/"></script>
 	<script type="text/javascript" src="{{url_for('static', filename='javascript/yelp.js')}}"></script>
 	<script type="text/javascript" src="{{url_for('static', filename='javascript/strip.js')}}"></script>
+	<script type="text/javascript" src="{{url_for('static', filename='javascript/paypal.js')}}"></script>
 </body>
 </html>
