--- a/backend/static/stylesheets/main.scss
+++ b/backend/static/stylesheets/main.scss
@@ -4,18 +4,18 @@ body{
   font-size: 14px;
 }
 
-input{
+input, button{
   padding: 15px;
   border-radius: 5px;
   border: 1px solid lightgray;
 }
 
-input[type='submit']{
+input[type='submit'], button{
   background-color: black;
   color: white;
 }
 
-input[type='submit']:hover{
+input[type='submit']:hover, button:hover{
   background-color: gray;
   box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.2);
 }
@@ -206,4 +206,7 @@ input[type='submit']:hover{
   transition: all .8s;
 }
 
+.paypal{
+  margin-top: 25px;
+}
 
